--- a/p3/Makefile
+++ b/p3/Makefile
@@ -1,5 +1,5 @@
-uniqname = yangfei # replace with your uniqname
-password = yangfei # replace with your mongoDB password (default: your uniqname)
+uniqname = mminjie # replace with your uniqname
+password = mminjie # replace with your mongoDB password (default: your uniqname)
 
 compile:
 	javac -Xlint:-unchecked -cp "ojdbc6.jar:json-20151123.jar:json_simple-1.1.jar:" Main.java GetData.java
